final project completed

--- a/final.html
+++ b/final.html
@@ -27,7 +27,7 @@
     .header-box {
       grid-column: 1 / -1;
       text-align: center;
-      background: linear-gradient(135deg, #6e8efb, #a777e3);
+      background: linear-gradient(135deg, #cdb79e, #a777e3);
       color: white;
     }
     .image-placeholder {
